tests/_resources/error_gcns/syntax_unopened_parenthesis.expected
error[E001]: Missing semicolon. Found ''U''
  --> syntax_unopened_parenthesis.gcn:6:9
     |
   4 |     identities
   5 |     {
   6 |         U[] = C[] + I[]);
     |         ^ missing semicolon
   7 |     };
   8 | };
     |
   = note: Add ';' at the end of the statement
   = note: Check that each equation ends with ';'
   = note: Check that each block component ends with '};'
