tests/_resources/error_gcns/syntax_unopened_parenthesis.gcn
# Error: Unopened parenthesis (extra closing paren)
block UTILITY
{
    identities
    {
        U[] = C[] + I[]);
    };
};
